finished Prismare sword. Started work on Dipped Warped sword

--- a/src/main/resources/assets/ramswords/lang/en_us.json
+++ b/src/main/resources/assets/ramswords/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.ramswords.prismare_sword": "Prismare Sword"
+  "item.ramswords.prismare_sword": "Prismare Sword",
+  "item.ramswords.warped_sword": "Warped Sword",
+  "item.ramswords.dipped_warped_sword": "Dipped Warped Sword"
 }
